force-app/main/default/objects/FieloEE__Section__c/FieloEE__Section__c.object-meta.xml
<CustomObject>
    <description>Predetermined compartments that make up a page in the members’ portal. Components are placed in the sections.</description>
    <label>Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>