force-app/main/default/objects/FieloEE__Section__c/fields/FieloEE__Class__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Class__c</fullName>
    <formula>IF( ISNULL( FieloEE__Parent__c ) || FieloEE__Parent__c = &#39;&#39; , &#39;Parent&#39; , &#39;Sub section&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class</label>
    <type>Text</type>
</CustomField>