force-app/main/default/objects/FieloEE__Section__c/fields/FieloEE__Menu__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>