force-app/main/default/objects/FieloEE__Section__c/fields/FieloEE__Parent__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>FieloEE__Section__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>